fix ls and csls integration tests